--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "@elevenlabs/react-formbuilder",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Form builder for React, without tears",
   "main": "./lib/index.js",
   "scripts": {
-    "build": "babel ./src --out-dir ./lib",
-    "storybook": "start-storybook -s ./public -p 6006",
-    "build-storybook": "build-storybook"
+    "clean": "rm -rf ./lib",
+    "build": "npm run clean && babel ./src --out-dir ./lib"
   },
   "keywords": [
     "formbuilder",
@@ -17,7 +16,7 @@
     "react-dom",
     "formik"
   ],
-  "author": "Eleven Labs",
+  "author": "Fabien PASQUET",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -25,39 +24,19 @@
   },
   "homepage": "https://github.com/eleven-labs/react-formbuilder#readme",
   "dependencies": {
-    "cross-fetch": "^2.2.2",
     "form-data-to-object": "^0.2.0",
-    "formik": "^1.0.2",
+    "formik": "^1.2.0",
     "lodash": "^4.17.10",
     "spected": "^0.7.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.4.10",
-    "@storybook/addon-links": "^3.4.10",
-    "@storybook/addons": "^3.4.10",
-    "@storybook/react": "^3.4.10",
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "babel-runtime": "^6.26.0",
-    "css-loader": "^1.0.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "i18next": "^11.6.0",
-    "i18next-browser-languagedetector": "^2.2.3",
-    "i18next-xhr-backend": "^1.5.1",
-    "node-sass": "^4.9.2",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-i18next": "^7.11.0",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.22.1",
-    "uglifyjs-webpack-plugin": "^1.2.7"
+    "react": "^16.4.2"
   },
   "peerDependencies": {
-    "react": ">=15",
-    "react-i18next": ">=7"
+    "react": ">=15"
   }
 }
