--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ logs
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
+.cache
+dist
 
 # don't commit compiled files
 lib
